Ignoring single nested components instead of whole ensemble; for some reason not saving hasco solutions